tests/invalid/subscript_non_subscriptable/main.py
x: int = 5
y: int = x[0]
